[package]
name = "oer_conversion_rates"
version = "1.2.1"
edition = "2021"
readme = "README.md"
description = "A minimalist terminal currency convertor"
repository = "https://github.com/TuxMC-sys/currency_converter/tree/main"
license = "GPL-3.0-or-later"
keywords = ["currency","currencies","utilities","money", "international"]
categories = ["command-line-utilities","finance"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.12.4"
serde_json = "1.0.116"
serde = { version = "1.0.198", features = ["derive"] }
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
dirs = "6.0.0"
clap = { version = "4.5.7", features = ["derive"] }
human-panic = "2.0.0"

